--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
     - assets/mars.png
     - assets/donationquote.jpeg
     - assets/profile_photos/
+    - assets/Founders/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
